chore(prt): unify compute entrypoint - use `prt_compute.lua` for both Lua and Rust node - update README and Dockerfile - update helper functions to handle log display - update Rust node to signal idle state

--- a/prt/lua_poc/Dockerfile
+++ b/prt/lua_poc/Dockerfile
@@ -38,7 +38,7 @@ WORKDIR "/app/lua_poc"
 
 COPY ./prt/lua_poc/ .
 RUN chmod +x compute-test-entrypoint.sh
-RUN chmod +x self_contained_entrypoint.lua
+RUN chmod +x prt_compute.lua
 RUN chmod +x doom_showcase/process_doom_graphics.lua
 
 WORKDIR "/app"
