feat(lua_poc): implement snapshot

--- a/prt/lua_poc/Dockerfile
+++ b/prt/lua_poc/Dockerfile
@@ -43,4 +43,5 @@ RUN chmod +x doom_showcase/process_doom_graphics.lua
 
 WORKDIR "/app"
 RUN mkdir -p pixels
+RUN mkdir -p machines
 ENTRYPOINT ["./lua_poc/compute-test-entrypoint.sh"]
